fixed media queries for contact form so 100% on medium screens - better spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -695,6 +695,12 @@ audio {
     }
 }
 
+@media (max-width:1200px) {
+    .container-fluid.form-container {
+        width: 100%;
+    }
+}
+
 .form-control {
     display: block;
     width: 50%;
@@ -807,129 +813,138 @@ input[type="number"] {
 @media (min-width:992px) {
     .container.calendar {
         margin-top: 100px;
+        width:100%;
     }
 }
 
 @media (min-width: 768px) {
     .container.calendar {
         width: 100%;
-        padding-left:15px;
+        padding-left: 15px;
     }
 }
 
-    .calendar h2 {
-        font-family: "Kavoon", sans-serif;
-        color: #fff;
-        font-weight: 700;
-        font-size: 36px;
+@media (min-width:1200px) {
+    .container.calendar {
+        margin-top: 100px;
+        width:50%;
     }
+}
 
-    .calendar-text {
-        font-family: "Kavoon", sans-serif;
-        color: #fff;
-        font-weight: 500;
-        font-size: 20px;
-    }
+.calendar h2 {
+    font-family: "Kavoon", sans-serif;
+    color: #fff;
+    font-weight: 700;
+    font-size: 36px;
+}
 
+.calendar-text {
+    font-family: "Kavoon", sans-serif;
+    color: #fff;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+table,
+td {
+    border: 1px solid white;
+    text-align: center;
+    padding: 15px 15px 15px 15px;
+    color: #000;
+    background-color: #AAE748;
+    font-family: "Kavoon", sans-serif;
+    font-size: 15px;
+}
+
+@media (max-width:360px) {
     table,
     td {
         border: 1px solid white;
         text-align: center;
-        padding: 15px 15px 15px 15px;
+        padding: 10px 10px 10px 10px;
         color: #000;
         background-color: #AAE748;
         font-family: "Kavoon", sans-serif;
-        font-size: 15px;
+        font-size: 10px;
     }
+}
 
-    @media (max-width:360px) {
-        table,
-        td {
-            border: 1px solid white;
-            text-align: center;
-            padding: 10px 10px 10px 10px;
-            color: #000;
-            background-color: #AAE748;
-            font-family: "Kavoon", sans-serif;
-            font-size: 10px;
-        }
-    }
+.month-year {
+    font-weight: bold;
+    text-align: center;
+}
 
-    .month-year {
-        font-weight: bold;
-        text-align: center;
-    }
-
-    .background-fill {
-        background-color: #EF6BBC;
-    }
+.background-fill {
+    background-color: #EF6BBC;
+}
 
 
-    /*---------------------------------------------------- footer */
-    footer {
-        position: fixed;
-        height: 50px;
-        bottom: 0;
-        width: 100%;
-        background-color: #F2AD08;
-        z-index: 2;
-    }
+/*---------------------------------------------------- footer */
 
-    .sign-up-link {
-        line-height: 50px;
-        color: #ffffff;
-        font-family: "Kavoon", sans-serif;
-    }
+footer {
+    position: fixed;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
+    background-color: #F2AD08;
+    z-index: 2;
+}
 
-    .sign-up-link:hover {
-        text-decoration: underline;
-    }
+.sign-up-link {
+    line-height: 50px;
+    color: #ffffff;
+    font-family: "Kavoon", sans-serif;
+}
 
-    a:focus,
-    a:hover {
-        color: #fff;
-        text-decoration: none;
-    }
+.sign-up-link:hover {
+    text-decoration: underline;
+}
 
+a:focus,
+a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.social-links {
+    line-height: 50px;
+    text-align: right;
+}
+
+@media (max-width:768px) {
     .social-links {
-        line-height: 50px;
-        text-align: right;
-    }
-
-    @media (max-width:768px) {
-        .social-links {
-            line-height: 25px;
-            text-align: center;
-        }
-    }
-
-    @media (max-width:992px) {
-        .social-links {
-            line-height: 25px;
-            text-align: center;
-        }
-    }
-
-    #follow {
-        color: #ffffff;
-        font-family: "Kavoon", sans-serif;
-    }
-
-    .fa {
-        color: #F2AD08;
-        background-color: #ffffff;
+        line-height: 25px;
         text-align: center;
-        margin: 0px;
-        width: 32px;
-        height: 32px;
-        padding: 6px 0 6px 0;
-        border-radius: 50%;
-        transition: all 0.4s ease-in-out;
-        -moz-transition: all 0.4s ease-in-out;
-        -webkit-transition: all 0.4s ease-in-out;
-        -o-transition: all 0.4s ease-in-out;
     }
+}
 
-    .fa:hover {
-        background-color: #EF6BBC;
+@media (max-width:992px) {
+    .social-links {
+        line-height: 25px;
+        text-align: center;
     }
+}
+
+#follow {
+    color: #ffffff;
+    font-family: "Kavoon", sans-serif;
+}
+
+.fa {
+    color: #F2AD08;
+    background-color: #ffffff;
+    text-align: center;
+    margin: 0px;
+    width: 32px;
+    height: 32px;
+    padding: 6px 0 6px 0;
+    border-radius: 50%;
+    transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+}
+
+.fa:hover {
+    background-color: #EF6BBC;
+}
